[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Narrative/TextBox.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="TextBox" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 8.0
margin_right = 152.0
margin_bottom = 96.0
color = Color( 0.113725, 0.168627, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_right = 152.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 1 )
text = "HERE HAVE A COIN... GOOD LUCK!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesOption" type="Button" parent="."]
margin_left = 56.0
margin_top = 40.0
margin_right = 116.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "BUTTON_1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoOption" type="Button" parent="."]
margin_left = 56.0
margin_top = 72.0
margin_right = 116.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 3 )
text = "BUTTON_2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="."]
visible = false
margin_left = 56.0
margin_top = 72.0
margin_right = 116.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 3 )
text = "BYE!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="YesOption" to="." method="_on_YesOption_pressed"]
[connection signal="pressed" from="NoOption" to="." method="_on_NoOption_pressed"]
[connection signal="pressed" from="Done" to="." method="_on_Done_pressed"]
